log
Sat, May 17, 2025  8:05:33 PM: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:3: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
   for (int k = 0 ; k < 9 ; k ++)
   ^~~
sudoku.c:71:5: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
     return list;
     ^~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sat, May 17, 2025  8:09:40 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
7a0dcc1
Sat, May 17, 2025 10:32:50 PM: 
 sudoku.c | 76 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 75 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3a435e2
Sat, May 17, 2025 10:38:50 PM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
b1ff577
Sat, May 17, 2025 10:41:36 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
4995c28
Sat, May 17, 2025 10:45:08 PM: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
33a833a
Sat, May 17, 2025 10:49:05 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
792731a
Sat, May 17, 2025 10:51:13 PM: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
5e246dc
Sat, May 17, 2025 11:02:19 PM: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++++----------
 1 file changed, 36 insertions(+), 10 deletions(-)
 tests:  5|3
total_score: 35/70
734a23a
Sat, May 17, 2025 11:09:14 PM: 
 sudoku.c | 40 ++--------------------------------------
 1 file changed, 2 insertions(+), 38 deletions(-)
 tests:  0|0
f319559
Sat, May 17, 2025 11:12:32 PM: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
4eda1ac
Sat, May 17, 2025 11:14:57 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
a8b54d3
Sat, May 17, 2025 11:20:21 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5c0a87b
Sat, May 17, 2025 11:23:41 PM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
59bd951
Sun, May 18, 2025 12:21:11 AM: 
 sudoku.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  6|2
total_score: 45/70
fbf7f93
Sun, May 18, 2025 12:22:09 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
edbe7c0
Sun, May 18, 2025 12:42:58 AM: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|0
0b972de
